进程配置管理特性开关查询去鉴权化
